--- a/Untitled22.ipynb
+++ b/Untitled22.ipynb
@@ -871,28 +871,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 111,
    "id": "5d8819ec",
    "metadata": {},
    "outputs": [
     {
-     "ename": "error",
-     "evalue": "invalid group reference",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31merror\u001b[0m                                     Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[76], line 4\u001b[0m\n\u001b[0;32m      2\u001b[0m text\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHello hello world world\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m      3\u001b[0m Pattern\u001b[38;5;241m=\u001b[39m\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mb(\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mw+)\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124ms+\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124m1\u001b[39m\u001b[38;5;124m\\\u001b[39m\u001b[38;5;124mb\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m----> 4\u001b[0m result\u001b[38;5;241m=\u001b[39m\u001b[43mre\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msub\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpattern\u001b[49m\u001b[43m,\u001b[49m\u001b[38;5;124;43mr\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m\\\u001b[39;49m\u001b[38;5;124;43m1\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m,\u001b[49m\u001b[43mflags\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mre\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mIGNORECASE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28mprint\u001b[39m(result)\n",
-      "File \u001b[1;32m~\\anaconda3\\lib\\site-packages\\regex\\regex.py:278\u001b[0m, in \u001b[0;36msub\u001b[1;34m(pattern, repl, string, count, flags, pos, endpos, concurrent, timeout, ignore_unused, **kwargs)\u001b[0m\n\u001b[0;32m    272\u001b[0m \u001b[38;5;124;03m\"\"\"Return the string obtained by replacing the leftmost (or rightmost with a\u001b[39;00m\n\u001b[0;32m    273\u001b[0m \u001b[38;5;124;03mreverse pattern) non-overlapping occurrences of the pattern in string by the\u001b[39;00m\n\u001b[0;32m    274\u001b[0m \u001b[38;5;124;03mreplacement repl. repl can be either a string or a callable; if a string,\u001b[39;00m\n\u001b[0;32m    275\u001b[0m \u001b[38;5;124;03mbackslash escapes in it are processed; if a callable, it's passed the match\u001b[39;00m\n\u001b[0;32m    276\u001b[0m \u001b[38;5;124;03mobject and must return a replacement string to be used.\"\"\"\u001b[39;00m\n\u001b[0;32m    277\u001b[0m pat \u001b[38;5;241m=\u001b[39m _compile(pattern, flags, ignore_unused, kwargs, \u001b[38;5;28;01mTrue\u001b[39;00m)\n\u001b[1;32m--> 278\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mpat\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43msub\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrepl\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstring\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mcount\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mendpos\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mconcurrent\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[43m)\u001b[49m\n",
-      "\u001b[1;31merror\u001b[0m: invalid group reference"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Hello world world\n"
      ]
     }
    ],
    "source": [
     "import regex as re\n",
-    "text=r\"Hello hello world world\"\n",
+    "text=\"Hello Hello world world\"\n",
     "Pattern=r\"\\b(\\w+)\\s+\\1\\b\"\n",
-    "result=re.sub(pattern,r'\\1',text,flags=re.IGNORECASE)\n",
+    "result=re.sub(pattern,r\"\\1\",text,flags=re.IGNORECASE)\n",
     "print(result)"
    ]
   },
@@ -907,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "id": "3582e594",
    "metadata": {},
    "outputs": [
@@ -915,29 +910,155 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u0001 \u0001 \u0001 \u0001\n"
+      "hello123\n"
      ]
     }
    ],
    "source": [
     "pattern=\".*[a-zA-Z0-9]$\"\n",
     "text=\"hello123\"\n",
-    "rseult=re.match(pattern,text)\n",
+    "result=re.match(pattern,text)\n",
+    "print(result.group())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6613ea06",
+   "metadata": {},
+   "source": [
+    "# Question no.: 27\n",
+    "Write a python program using RegEx to extract the hashtags.\n",
+    "Sample Text:  \"\"\"RT @kapil_kausik: #Doltiwal I mean #xyzabc is \"hurt\" by #Demonetization as the same has rendered USELESS <ed><U+00A0><U+00BD><ed><U+00B1><U+0089> \"acquired funds\" No wo\"\"\"\n",
+    "Expected Output: ['#Doltiwal', '#xyzabc', '#Demonetization']\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "389a812a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['#Doltiwal', '#xyzabc', '#Demonetization']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text='\"\"\"RT @kapil_kausik: #Doltiwal I mean #xyzabc is \"hurt\" by #Demonetization as the same has rendered USELESS <U+00A0><U+00BD><U+00B1><U+0089> \"acquired funds\" No wo\"\"\"'\n",
+    "pattern=r\"#\\w+\"\n",
+    "result=re.findall(pattern,text)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f602e46",
+   "metadata": {},
+   "source": [
+    "# Question no.: 28\n",
+    "Write a python program using RegEx to remove <U+..> like symbols\n",
+    "Check the below sample text, there are strange symbols something of the sort <U+..> all over the place. You need to come up with a general Regex expression that will cover all such symbols.\n",
+    "Sample Text: \"@Jags123456 Bharat band on 28??<ed><U+00A0><U+00BD><ed><U+00B8><U+0082>Those who  are protesting #demonetization  are all different party leaders\"\n",
+    "Expected Output: @Jags123456 Bharat band on 28??<ed><ed>Those who  are protesting #demonetization  are all different party leaders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "e9353e73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "@Jags123456 Bharat band on 28??Those who are protesting #demonetization are all different party leaders\n"
+     ]
+    }
+   ],
+   "source": [
+    "text='@Jags123456 Bharat band on 28??<U+00A0><U+00BD><U+00B8><U+0082>Those who are protesting #demonetization are all different party leaders'\n",
+    "pattern=\"<U\\+[0-9a-zA-Z]+>\"\n",
+    "result=re.sub(pattern,\"\",text)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "306b9d19",
+   "metadata": {},
+   "source": [
+    "# Question no.: 29\n",
+    "Write a python program to extract dates from the text stored in the text file.\n",
+    "Sample Text: Ron was born on 12-09-1992 and he was admitted to school 15-12-1999.\n",
+    "Note- Store this sample text in the file and then extract dates.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "d4d60055",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['12-09-1992', '15-12-1999']\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=\"Ron was born on 12-09-1992 and he was admitted to school 15-12-1999\"\n",
+    "pattern=r\"\\b\\d{2}-\\d{2}-\\d{4}\\b\"\n",
+    "result=re.findall(pattern,text)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f4563318",
+   "metadata": {},
+   "source": [
+    "# Question no. 30:\n",
+    "Create a function in python to remove all words from a string of length between 2 and 4.\n",
+    "The use of the re.compile() method is mandatory.\n",
+    "Sample Text: \"The following example creates an ArrayList with a capacity of 50 elements. 4 elements are then added to the ArrayList and the ArrayList is trimmed accordingly.\"\n",
+    "Expected Output:  following example creates ArrayList a capacity elements. 4 elements added ArrayList ArrayList trimmed accordingly.\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "id": "ce3b760b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " following example creates  ArrayList  a capacity   elements. 4 elements   added   ArrayList   ArrayList  trimmed accordingly\n"
+     ]
+    }
+   ],
+   "source": [
+    "text=\"The following example creates an ArrayList with a capacity of 50 elements. 4 elements are then added to the ArrayList and the ArrayList is trimmed accordingly\"\n",
+    "pattern=r\"\\b\\w{2,4}\\b\"\n",
+    "pattern_string=re.compile(pattern)\n",
+    "result=pattern_string.sub(\"\",text)\n",
     "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29ba06be",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6e1c4161",
+   "id": "96271e14",
    "metadata": {},
    "outputs": [],
    "source": []
